# pyalgotrade

./: .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  cleanup.sh  pyproject.toml  tox.ini
doc/: Makefile  api_toc.rst  bar.rst  barfeed.rst  bitcoincharts_example.rst  bitcoincharts_ref.rst  bitstamp_example.rst  bitstamp_ref.rst  broker.rst  compinvpart1.rst  conf.py  contributing.rst  dataseries.rst  eventprofiler.rst  feed.rst  index.rst  intro.rst  marketsession.rst  migrating.rst  optimizer.rst  plotter.rst  stratanalyzer.rst  strategy.rst  talib.rst  technical.rst  tools.rst  tutorial.rst  twitter_example.rst  twitter_ref.rst
quantworks/: __init__.py  bar.py  dispatcher.py  dispatchprio.py  eventprofiler.py  logger.py  marketsession.py  observer.py  plotter.py  resamplebase.py  warninghelpers.py
quantworks/barfeed/: __init__.py  common.py  csvfeed.py  dbfeed.py  googlefeed.py  listfeed.py  membf.py  ninjatraderfeed.py  pandasfeed.py  quandlfeed.py  resampled.py  sqlitefeed.py  yahoofeed.py
quantworks/bitcoincharts/: barfeed.py
quantworks/bitstamp/: __init__.py  barfeed.py  broker.py  common.py  httpclient.py  livebroker.py  livefeed.py  wsclient.py
quantworks/broker/: __init__.py  backtesting.py  fillstrategy.py  slippage.py
quantworks/dataseries/: __init__.py  aligned.py  bards.py  resampled.py
quantworks/examples/: sma_crossover.py
quantworks/feed/: __init__.py  csvfeed.py  memfeed.py
quantworks/optimizer/: base.py  local.py  serialization.py  server.py  worker.py  xmlrpcserver.py
quantworks/stratanalyzer/: __init__.py  drawdown.py  returns.py  sharpe.py  trades.py
quantworks/strategy/: __init__.py  position.py
quantworks/talibext/: indicator.py
quantworks/technical/: __init__.py  atr.py  bollinger.py  cross.py  cumret.py  highlow.py  hurst.py  linebreak.py  linreg.py  ma.py  macd.py  ratio.py  roc.py  rsi.py  stats.py  stoch.py  vwap.py
quantworks/tools/: quandl.py  resample.py
quantworks/twitter/: feed.py
quantworks/utils/: __init__.py  collections.py  csvutils.py  dt.py  stats.py
quantworks/websocket/: client.py  pusher.py
samples/: bbands.py  bccharts_example_1.py  bccharts_example_2.py  compinv-1.py  csvfeed_1.py  eventstudy.py  market_timing.py  quandl_sample.py  rsi2.py  rsi2_sample.py  sample-strategy-analyzer.py  sma_crossover_sample.py  statarb_erniechan.py  technical-1.py  tutorial-1.py  tutorial-2.py  tutorial-3.py  tutorial-4.py  tutorial-5.py  tutorial-optimizer-local.py  tutorial-optimizer-server.py  tutorial-optimizer-worker.py  tutorial_bitstamp_1.py  tutorial_twitter_bitstamp.py  vwap_momentum.py
testcases/: common.py  test_strategy.py
testcases/integration/: __init__.py  bitstamp_test.py  pusher_test.py  quandl_test.py  talib_test.py  twitter_test.py
testcases/unit/: __init__.py  bar_test.py  (+49 more)
(+8 files in other folders)
