[tool.poetry]
name = "pyalgotrade-ttymck"
version = "0.20.post0"
description = "algorithmic trading framework"
authors = ["ttymck <tyler@tylerkontra.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "3.1.2"
numpy = "1.18.0"
python-dateutil = "2.8.1"
pytz = "2019.3"
requests = "2.22.0"
retrying = "1.3.3"
scipy = "1.4.1"
six = "1.13.0"
tornado = "6.0.3"
tweepy = "3.8.0"
ws4py = "0.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
