[tool.poetry]
name = "quantworks"
version = "0.21.dev0"
description = "Python Algorithmic Trading Framework"
authors = ["Gabriel Martin Becedillas Ruiz <pyalgotrade@gmail.com>", "Tyler M Kontra <tyler@tylerkontra.com>"]
classifiers = ["Programming Language :: Python :: 3", "Operating System :: OS Independent"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "3.1.2"
numpy = "1.18.0"
python-dateutil = "2.8.1"
pytz = "2019.3"
requests = "2.22.0"
retrying = "1.3.3"
scipy = "1.4.1"
six = "1.13.0"
tornado = "6.0.3"
tweepy = "3.8.0"
ws4py = "0.3.4"
TA-Lib = { version = "^0.4.17", optional = true }
coveralls = "^1.9"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
tox = "^3.14"
pytest-cov = "^2.8"

[tool.poetry.extras]
TALib = ["cython", "TA-Lib"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
